# cosmic_conchometer

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGES.rst  MANIFEST.in  README.rst  conftest.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci_cron.yml  ci_tests.yml  label_pr.yml
cosmic_conchometer/: __init__.py  _astropy_init.py  common.py  config.py  conftest.py  cosmic_conchometer.cfg  setup_package.py  typing.py
cosmic_conchometer/boltzmann/: __init__.py  base.py  husugiyama95.py  utils.py
cosmic_conchometer/boltzmann/tests/: test_base.py
cosmic_conchometer/data/: __init__.py  explanatory.ini
cosmic_conchometer/data/tests/: __init__.py
cosmic_conchometer/diffusion_distortion/: __init__.py  _spectral_distortion.py  core.py  plot.py  spectral.py  utils.py
cosmic_conchometer/diffusion_distortion/scripts/: __init__.py  _scriptC.py  hypergeometric.py  spectral.py  spectral_Cs.py  spectral_hypergeometric.py  spectral_script.py
cosmic_conchometer/diffusion_distortion/tests/: __init__.py  test_core.py  test_spectral_distortion.py  utils.py
cosmic_conchometer/initial_conditions/: __init__.py
cosmic_conchometer/intrinsic_y/: __init__.py  _graybody.py  _spectral_distortion.py  core.py
cosmic_conchometer/intrinsic_y/tests/: __init__.py  test_core.py  test_spectral_distortion.py  utils.py
cosmic_conchometer/tests/: __init__.py  test_common.py  test_init.py  test_installed.py  test_setup_package.py  test_typing.py
cosmic_conchometer/utils/: __init__.py  classy_utils.py  distances.py  misc.py
docs/: .gitignore  conf.py  credits.rst  glossary.rst  index.rst
docs/cosmic_conchometer/: data.rst  diffusion_distortion.rst  index.rst  intrinsic_y.rst
docs/documentation/: code_quality.rst  installation.rst  testing.rst
docs/papers_and_presentations/: README.rst
docs/whatsnew/: 0.1.rst  1.0.rst
notebooks/: ABOUT.md  ABOUT.txt  Bessel Function Integral for SD.nb  Distance on Path.nb  LSS Diffusion Distortion.ipynb  Numerical LSS Intrinsic Compton-Y.ipynb  hypergeometric.ipynb  transfer_function.ipynb
notebooks/input/: parameters.ini
notebooks/output/: parameters.ini
scripts/: README.CWRUHPC.txt
src/cosmic_conchometer/: __init__.py  _typing.py  common.py  config.py  conftest.py  datasets.py  params.py  ps.py  setup_package.py  tf.py  typing.py
src/cosmic_conchometer/boltzmann/: __init__.py  base.py  baumann.py  utils.py
src/cosmic_conchometer/diffusion_distortion/: __init__.py  core.py  prob_2ls.py  signal.py  spectral.py  utils.py
src/cosmic_conchometer/initial_conditions/: __init__.py
src/cosmic_conchometer/temperature_diffusion_spectra_distortion/: __init__.py  core.py  signal.py  utils.py
src/cosmic_conchometer/temperature_diffusion_spectra_distortion/fourier_method/: __init__.py  fft.py
src/cosmic_conchometer/temperature_diffusion_spectra_distortion/prob_2ls/: __init__.py  compute.py  fft.py  sample.py  utils.py
src/cosmic_conchometer/utils/: __init__.py  classy_utils.py  distances.py
tests/: __init__.py  test_common.py  test_datasets.py  test_installed.py  test_params.py  test_ps.py  test_setup_package.py  test_tf.py  test_typing.py
tests/boltzmann/: test_base.py
tests/diffusion_distortion/: __init__.py  image_hashes.json  test_core.py  test_prob_2ls.py  test_utils.py  utils.py
tests/utils/: __init__.py  test_classy_utils.py  test_distances.py
