[build-system]
requires = ["setuptools",
            "setuptools_scm",
            "extension_helpers",
            "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
    line-length = 88


[tool.coverage]

    [tool.coverage.report]
        exclude_lines = [
            # Have to re-enable the standard pragma
            "pragma: no cover",
            "pragma: py{ignore_python_version}",
            # Don't complain about packages we have installed
            "except ImportError",
            # Don't complain if tests don't hit defensive assertion code:
            "raise AssertionError",
            "raise NotImplementedError",
            # Don't complain about abstract methods, they aren't run:
            '@(abc\.)?abstractmethod',
            # Exclude type check blocks and Protocol contents, they aren't run:
            "if TYPE_CHECKING:",
            '\.\.\.',
            # Don't complain about IPython completion helper
            "def _ipython_key_completions_",
        ]


[tool.isort]
    profile = "black"
    sections = [ "FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER",]
    known_third_party = ["astropy", "classy", "extension_helpers", "matplotlib", "numba", "numpy", "pytest", "scipy", "setuptools", "shapely", "tqdm"]
    known_localfolder = "cosmic_conchometer"
    import_heading_stdlib = "STDLIB"
    import_heading_thirdparty = "THIRD-PARTY"
    import_heading_firstparty = "FIRST-PARTY"
    import_heading_localfolder = "LOCAL"


[tool.mypy]
    disallow_subclassing_any = false
    disallow_untyped_defs = true
    ignore_missing_imports = true
    no_implicit_optional = true
    warn_return_any = true
    warn_redundant_casts = true
    warn_unused_configs = true
    warn_unreachable = true
    exclude = '''(^|/)tests/'''
    plugins = []
    python_version = "3.10"

    [[tool.mypy.overrides]]
        module = "*/tests/*"
        ignore_errors = true

    [[tool.mypy.overrides]]
        module = "tests/*"
        ignore_errors = true


[tool.ruff]
    line-length = 88
    select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "D",
    "E",
    "ERA",
    "F",
    "FBT",
    "ICN",
    "N",
    "PGH",
    "PLC",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT"
    ]
    ignore = [
    "ANN101", "ANN102", "ANN401",
    "ARG001", "ARG002",
    "D105", "D107", "D203", "D213",
    "FBT003",
    ]


[tool.ruff.per-file-ignores]
    "docs/conf.py" = ["A001"]
