[metadata]
name = cosmic_conchometer
author = Nathaniel Starkman
author_email = n.starkman@mail.utoronto.ca
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/nstarman/cosmic_conchometer
description = Observables from a thick scattering volume
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = nstarman/cosmic_conchometer

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    extension_helpers
    numpy
    pytest

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy
    nbsphinx
    jupyter_client

[options.package_data]
* = */data/*, */data/*/*
cosmic_conchometer = data/*

[tool:pytest]
testpaths = "cosmic_conchometer" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
doctest_norecursedirs=*/cosmic_conchometer/extern/*
addopts = --doctest-rst

[coverage:run]
omit =
    cosmic_conchometer/_astropy_init*
    cosmic_conchometer/conftest.py
    cosmic_conchometer/*setup_package*
    cosmic_conchometer/tests/*
    cosmic_conchometer/*/tests/*
    cosmic_conchometer/extern/*
    cosmic_conchometer/version*
    */cosmic_conchometer/_astropy_init*
    */cosmic_conchometer/conftest.py
    */cosmic_conchometer/*setup_package*
    */cosmic_conchometer/tests/*
    */cosmic_conchometer/*/tests/*
    */cosmic_conchometer/extern/*
    */cosmic_conchometer/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
